[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/characters.png" type="Texture" id=1]
[ext_resource path="res://src/Actor/Enemy.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "run",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.31663, 4.78111 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.97531, 2.48046 )

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( -0.0371628, 0 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="EnemySprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
frames = SubResource( 2 )
animation = "run"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4.92787 )
shape = SubResource( 3 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( 0, -7.76752 )
scale = Vector2( 1, 0.774491 )
process_parent = true
physics_process_parent = true

[node name="StompDetector" type="Area2D" parent="."]
position = Vector2( 0, -9.74421 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
modulate = Color( 0.435294, 0.0666667, 0.92549, 1 )
position = Vector2( 0.442398, -2.22666 )
shape = SubResource( 4 )

[connection signal="body_entered" from="StompDetector" to="." method="_on_Area2D_body_entered"]
